presentation and report updates

--- a/report/Makefile
+++ b/report/Makefile
@@ -1,2 +1,4 @@
+all: report.pdf
+
 report.pdf: report.md citations.bib
 	pandoc --toc --filter pandoc-citeproc --bibliography=citations.bib --variable papersize=a4paper -s -o report.pdf report.md
